--- a/obsidian.css
+++ b/obsidian.css
@@ -174,6 +174,8 @@
 button {}
 /*Settings Buttons*/
 button.mod-cta {}
+/*Warning Buttons*/
+button.mod-warning{}
 
 
 
@@ -215,8 +217,24 @@ button.mod-cta {}
 
 .markdown-preview-view {} /*Reading Mode*/
 
+/*--Emphasis--*/
 
+/*Bold*/
+strong {} /*Reading View*/
+.cm-s-obsidian .cm-strong {} /*Editing View*/
 
+/*Italic/Emphasis*/
+em {} /*Reading View*/
+.cm-em {} /*Editing View*/
+
+/*Highlight*/
+.markdown-preview-view mark {} /*Reading View*/
+.cm-s-obsidian .cm-highlight {} /*Editing View*/
+.cm-s-obsidian .cm-formatting-highlight {} /*Editing View highlight symbols/syntax*/
+
+/*Strikethrough*/
+.cm-strikethrough {} /*Editing View*/
+del {} /*Reading View*/
 
 /*--Headers/Headings--*/
 h1 {} /*Reading Mode*/
