box-sizing reset
Added border-box reset for ::before and ::after pseudo-elements

--- a/obsidian.css
+++ b/obsidian.css
@@ -72,6 +72,16 @@
     --scrollbar-thumb-bg: rgba(0, 0, 0, 0.1); /*Scrollbar Color*/
     --scrollbar-active-thumb-bg: rgba(0, 0, 0, 0.2); /*Scrollbar Dragged Color*/
 }
+
+/*Box Sizing Reset - this makes it easier to set any ::before and ::after pseudo-elements' dimensions,
+since it includes any border and padding into the height and width values you set.
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}*/
+
 /*----Startup Progress Bar Screen----*/
 /*Startup Progress Bar Window*/
 .progress-bar {}
